# bk8500_library

./: .gitignore  .gitmodules  README.md  port_test.py  pyproject.toml  requirements.txt  setup.cfg
bk8500_library/: packet.py
libbk8500/: __init__.py  device.py  field.py  packet.py  power_tool.py
tests/: __init__.py  test_packets.py
