[metadata]
name = libbk8500
version = 0.0.1
author = Sam O'Brien
author_email = sam.obrien00@gmail.com
description = A library for interfacing with BK Precision 85XX DC Loads
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages =
    libbk8500
python_requires = >=3.6

[options.entry_points]
console_scripts =
    power_tool = libbk8500:power_tool.power_tool
